syntax = "proto3";
package peercommands;

message StoreConfig {
 repeated string Endpoints = 1;
}

message JoinReq {
  string PeerID = 1; // ID of the peer sending the request
  string ClusterID = 2; // ID of the Gluster cluster to be joined
  int32 Group = 6;
  StoreConfig Config = 3;
}

message JoinRsp {
  string PeerID = 1; // ID of the peer responding
  int32 Err = 2;
}

message LeaveReq {
  string PeerID = 1;
}

message LeaveRsp {
  int32 Err = 1;
}

service PeerService {
  rpc Join(JoinReq) returns(JoinRsp) {}
  rpc Leave(LeaveReq) returns(LeaveRsp) {}
}
