syntax = "proto3";

package transaction;

message TxnStepReq {
  string StepFunc = 1;
  bytes Context = 2; // Context JSON encoded TxnCtx
}

message TxnStepResp {
  string Error = 1;
  bytes Resp = 2; // Resp is JSON encoded TxnCtx
}

service TxnSvc {
  rpc RunStep(TxnStepReq) returns(TxnStepResp) {}
}
